# wrapper

./: .gitignore
build-wrap_object-sytem_g-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  wrap_object.cbp
build-wrap_object-sytem_g-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-wrap_object-sytem_g-Default/catkin_generated/installspace/: wrap_object.pc  wrap_objectConfig.cmake
build-wrap_object-sytem_g-Default/catkin_generated/stamps/wrap_object/: package.xml.stamp
build-wrap_object-sytem_g-Default/devel/: .catkin  .rosinstall  setup.sh
build-wrap_object-sytem_g-Default/devel/lib/pkgconfig/: wrap_object.pc
build-wrap_object-sytem_g-Default/devel/lib/wrap_object/: test_cylinder_node  test_wrap_object
build-wrap_object-sytem_g-Default/devel/share/wrap_object/cmake/: wrap_objectConfig.cmake
build-wrap_object-sytem_g-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
models_project/objects/: CMakeLists.txt
models_project/objects/include/objects/: socket.h  socket_one.h  socket_three.h  socket_two.h  vis_socket.h
models_project/objects/launch/: cup.launch  hammer.launch  plug.launch  radio.launch  table_hammer.launch
models_project/objects/launch/rviz/: cup.rviz  hammer.rviz  peg_in_hole.rviz  plug.rviz  radio.rviz  socket_wall.rviz  table_hammer.rviz
models_project/objects/meshes/: plug_socket_components.blend  plug_socket_components.blend1  wall.blend  wall.blend1  wall.dae  wall.mtl  wall.stl
models_project/objects/meshes/hammer/: BLENDSWAP_LICENSE.txt  hammer tool.blend  hammer tool.blend1  hammer.dae
models_project/objects/meshes/mug/: mug.blend  mug.blend1  mug.blend2  my_mug.blend  my_mug.blend1
models_project/objects/meshes/plug/: plug.blend  plug.blend1  plug.mlp  plug_no_end.blend  plug_no_end.blend1  plug_no_end.dae  plug_no_end.mlp
models_project/objects/meshes/plug/config/: X.txt
models_project/objects/meshes/socket_one/: socket_one.blend  socket_one.blend1  socket_one.blend2  socket_one.dae
models_project/objects/meshes/socket_three/: socket_three.blend  socket_three.blend1  socket_three.mtl  socket_three.txt
models_project/objects/src/: socket.cpp  socket_one.cpp  socket_three.cpp  socket_two.cpp  vis_socket.cpp
models_project/objects/urdf/: cup.xacro  hammer.urdf  hammer.xacro  peg_wall.gv  plug.xacro  radio.xacro
models_project/radio_model/: CMakeLists.txt  package.xml
models_project/radio_model/radio_model_description/launch/: radio_model_rviz.launch  rviz_config.rviz
models_project/radio_model/radio_model_description/meshes/: plug.stl
models_project/radio_model/radio_model_description/urdf/: radio_model.urdf  radio_model.xacro  radio_model_init.xacro
world_wrapper/: CMakeLists.txt  package.xml
world_wrapper/include/node/: publisher.h  service.h
world_wrapper/include/world_wrapper/: world_wrapper.h
world_wrapper/include/world_wrapper/visualisation/: vis_features.h  vis_wbox.h
world_wrapper/launch/: world_wrapper.launch  world_wrapper.rviz
world_wrapper/src/: publisher.cpp  run.cpp  service.cpp  test.cpp  world_wrapper.cpp
world_wrapper/src/visualisation/: vis_features.cpp  vis_wbox.cpp
world_wrapper/tmp/: load_mesh.h
world_wrapper/urdf/: circle.txt  cube.urdf  cube.xacro
wrap_object/: CMakeLists.txt
wrap_object/include/: geometry.h  spacepartition.h  wbox.h  wrapobject.h  wsocket.h
wrap_object/launch/: cylinder_test.launch
wrap_object/launch/rviz/: test_cylinder.rviz
wrap_object/src/: geometry.cpp  test.cpp  wbox.cpp  wrapobject.cpp  wsocket.cpp
wrap_object/src/testing/: cylinder_test_node.cpp
